--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "antd": "^4.23.2",
     "axios": "^0.21.4",
     "lodash": "^4.17.15",
-    "moment": "2.26.0",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "query-string": "^6.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.1.2",
     "react-router-navigation-prompt": "^1.8.13",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.0.0",
     "web-vitals": "^1.0.1"
