--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/validator": "^13.0.0",
     "antd": "^4.23.2",
     "axios": "^0.21.4",
+    "jose": "^4.14.4",
     "lodash": "^4.17.15",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
